# eyes.server

./: .env.example  .gitignore  Cargo.toml  README.md
src/: formatter.rs  main.rs
src/client/: mod.rs  response.rs
src/google/: mod.rs  response.rs
src/slack/: mod.rs
