[package]
name = "eyes"
version = "0.1.0"
authors = ["Yoshihiro Tanaka <contact@cordea.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
reqwest = "0.9.20"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
